<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Phone Sensing 2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="acceleration">Acceleration</string>
    
    
    
    <!--                Activity monitoring                    -->
    
    <string name="activityMonitoring">Activity Monitoring</string>
    <string name="activityresult">Activity</string>
    
    
    <!-- Coordinate labels -->
    	<string name="x_axis"> X </string>
    	<string name="y_axis"> Y </string>
    	<string name="z_axis"> Z </string>
    
    	
    
    
    	
    <!-- Debug view -->
    	<!-- TextView: Label for the shown value stored in db -->
    	<string name="showStoredTrainCoordinates"></string>
    
    	<string name="debugView"></string>
    	
    	<!-- Buttons to interact with db -->
    
		    <string name="buttonViewTrainData">View Training Data</string>
		    <string name="buttonResetTrainData">Reset Train Data</string>
		    <string name="buttonViewTestData">View Test Data</string>
		    <string name="buttonResetTestData">Reset Test Data</string>
		    
    
    
    	
    <!-- Training tab -->
    	<string name="stillButton">Start still</string>
    	<string name="walkButton">Start walking</string>
    	<string name="runButton">Start running</string>
    	<string name="jumpButton">Start jumping</string>
    
    
    <!-- Testing tab -->
    	<!-- TextView: Label for the shown value stored in db -->
    	<string name="showStoredTestCoordinates"></string>
    	
    	<string name="testButton">Start testing</string>
    
    
    	<string name="showCurrentActivity">None</string>
    	
    	<string name="analyze_activity">Analyze</string>
    	
    	<string name="knn_1_x">Ng 1 X-axis</string>
    	<string name="knn_1_y">Ng 1 Y-axis</string>
    	<string name="knn_1_z">Ng 1 Z-axis</string>
    	
    	
    	
    	<!-- Overview -->
	    	
	    	<string name="activityOverviewButton">Overview</string>
	    
	    	<string name="overviewActivityTitle">Overview</string>
	    	<string name="overviewActivity"></string>
	    	<string name="confusionMatrixTitle">Confusion Matrix</string>
	    	
	    	
    	<!-- Table -->
    		<string name="emptyHeaderCorner"></string>
    		<string name="headerStill">Still</string>
    		<string name="headerWalk">Walk</string>
    		<string name="headerRun">Run</string>
    		<string name="headerJump">Jump</string>
    		
    		<string name="rowHeaderStill">Still</string>
    		<string name="stillvsStill"></string>
    		<string name="stillvsWalk"></string>
    		<string name="stillvsRun"></string>
    		<string name="stillvsJump"></string>
    		
    		<string name="rowHeaderWalk">Walk</string>
    		<string name="walkvsStill"></string>
    		<string name="walkvsWalk"></string>
    		<string name="walkvsRun"></string>
    		<string name="walkvsJump"></string>
    		
    		<string name="rowHeaderRun">Run</string>
    		<string name="runvsStill"></string>
    		<string name="runvsWalk"></string>
    		<string name="runvsRun"></string>
    		<string name="runvsJump"></string>
    		
    		<string name="rowHeaderJump">Jump</string>
    		<string name="jumpvsStill"></string>
    		<string name="jumpvsWalk"></string>
    		<string name="jumpvsRun"></string>
    		<string name="jumpvsJump"></string>
	
    <!--                 End Activity monitoring                -->
    
    
    
    
    <!--					Localisation		          -->
    
    <string name="Localisation">Indoor Localisation</string>
    <string name="rssi">RSSI</string>
    
    
    <!-- Training tab -->
    
    	<string name="scanRssi">Rssi list</string>
	    <string name="aplist">Rssi list</string>
	    
	    <string name="scanCell">Scan cell</string>
	    <string name="cell_name">Enter cell name</string>
	    <string name="cell_hint">Enter cell name</string>
    	
    	
    	
   	<!-- Testing tab -->
   	
   		<string name="localisation_initial_belief_button">Initial belief</string>
    	<string name="localisation_sense_new_AP_button">Sense new AP</string>
    	<string name="localisation_sense_new_scan_button">Sense new Scan</string>
    	<string name="showLocationView">Location</string>
    	<string name="showCurrentLocationImage">Show current location</string>
   	
    	

   
   	<!-- AP selection tab -->
   	
		<string name="FinalizeSelection_button"> Finalize Selection </string>

   		
   		<!-- Training Data button to create histogram -->
   		<string name="FinalizeTraining_button"> Finalize Training </string>
   		
   		
   		
   		<string name="listAllAPHeader">All AP</string>
   		<string name="listSelectedAPHeader">Selected AP</string>



<string name="action_settings">Settings</string>

<string name="no_account_text">Don\'t have an account?</string>
<string name="account_text">Account</string>
<string name="no_account_selected_text">No Account Selected</string>
<string name="register_text">Register</string>
<string name="unregister_text">Unregister</string>
<string name="gcm_userid_text">GCM Registration ID:</string>
<string name="message_text">Message Type:</string>
<string name="enter_message_text">Enter your message</string>
<string name="send_message_text">Send</string>
<string name="text_name">Name:</string>
<string name="text_enter_your_name">Enter your name</string>
<string name="text_user">testUser@gmail.com</string>
<string-array name="array_message_actions">
<item>Echo</item>
<item>Broadcast</item>
<item>User Notification</item>
</string-array>


   		
   		
    
    <!--					End Localisation		          -->
    
    
    
 <!--     <string name="knn_2_x">Ng 2 X-axis</string>
    <string name="knn_2_y">Ng 2 Y-axis</string>
    <string name="knn_2_z">Ng 2 Z-axis</string>
    
   <string name="knn_3_x">Ng 3 X-axis</string>
    <string name="knn_3_y">Ng 3 Y-axis</string>
    <string name="knn_3_z">Ng 3 Z-axis</string>
    -->
    
    
    
    
    
</resources>
