<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.smartphonesensing2.MainActivity$PlaceholderFragment" >
<!-- 
    <EditText
        android:id="@+id/acceleration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:hint="@string/acceleration" />
-->

	<TextView
        android:id="@+id/debugView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debugView" />
	
    <Button
        android:id="@+id/store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/buttonStore" />
    
    
    <TextView
        android:id="@+id/x_axis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_axis" />
    
    
    <TextView
        android:id="@+id/y_axis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y_axis" />
    
    
    <TextView
        android:id="@+id/z_axis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/z_axis" />
    
    
    <TextView
        android:id="@+id/showStoredCoodinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showStoredCoordinates" />
    
    
    <!-- Sit activity -->
    <!--  
    <TextView
        android:id="@+id/sitView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showStoredCoordinates" />
    -->
    
    <Button
        android:id="@+id/sitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="trainSitActivity"
        android:text="@string/sitButton" />
    
    
    <Button
        android:id="@+id/walkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="trainWalkActivity"
        android:text="@string/walkButton" />
    
    
    <Button
        android:id="@+id/runButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="trainRunActivity"
        android:text="@string/runButton" />
    
    
    <Button
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="testActivity"
        android:text="@string/testButton" />

</LinearLayout>
