<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.smartphonesensing2.MainActivity$PlaceholderFragment" >
    
    
    
    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                
                <!-- Training tab -->
                
                <LinearLayout
                    android:id="@+id/training_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >
        
        
				    <EditText
			        	android:id="@+id/cell_name"
			        	android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:text="@string/cell_name" 
			        	android:hint="@string/cell_hint" />
				    
				    
				    <Button
				        android:id="@+id/scanCell"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:onClick="scanCell"
				        android:text="@string/scanCell" />
				
    
			    </LinearLayout>
			    
                
                <!-- Testing tab -->
                
                <LinearLayout
                    android:id="@+id/testing_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                    
                    
                    <Button
				        android:id="@+id/localisation_initial_belief_button"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:onClick="initialBelief"
				        android:text="@string/localisation_initial_belief_button" />
                    
                    
                    <Button
				        android:id="@+id/localisation_sense_new_AP_button"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:onClick="senseNewAP"
				        android:text="@string/localisation_sense_new_AP_button" />
                    
                    
                    <Button
				        android:id="@+id/localisation_sense_new_scan_button"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:onClick="senseNewScan"
				        android:text="@string/localisation_sense_new_scan_button" />
                    
                    
                    <TextView
			        	android:id="@+id/showLocationView"
			        	android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:text="@string/showLocationView" />
                        
		        </LinearLayout>
                
    		</FrameLayout>
        </LinearLayout>
    </TabHost>
    
    
    
    
<!-- 
    <EditText
        android:id="@+id/acceleration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:hint="@string/acceleration" />
-->
<!-- 
	<Button
        android:id="@+id/scanRssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="scanRssi"
        android:text="@string/scanRssi" />
 
	
	<ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

		<TextView
        	android:id="@+id/apList"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/aplist" />
	
	</ScrollView>
-->

</LinearLayout>
