<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.smartphonesensing2.MainActivity$PlaceholderFragment" >

    
        <Button
            android:id="@+id/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="testActivity"
            android:text="@string/testButton" />

        
        <Button
            android:id="@+id/AnalyzeActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="analyzeData"
            android:text="@string/analyze_activity" />
        
        
        <TextView
        	android:id="@+id/showStoredCoordinates"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/debugView" />
        
        
        <TextView
        	android:id="@+id/debugView"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/debugView" />

</LinearLayout>
