<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.smartphonesensing2.MainActivity$PlaceholderFragment" >
    
    
    
    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
       <!--   android:layout_weight="1"
         > -->
     
            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            
	            <FrameLayout
	                android:id="@android:id/tabcontent"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" >
	            
				    
		                 <!-- Training tab -->
		                
		                <LinearLayout
		                    android:id="@+id/training_tab"
		                    android:layout_width="fill_parent"
		                    android:layout_height="fill_parent"
		                    android:orientation="vertical" >
		        
						    <EditText
						        android:id="@+id/cell_name"
						        android:layout_width="fill_parent"
						        android:layout_height="63dp"
						        android:hint="@string/cell_hint"
						        android:text="@string/cell_name" />
						    
					    </LinearLayout>
					    
			         
			                
	                <!-- Testing tab -->
	                
	                <LinearLayout
	                    android:id="@+id/testing_tab"
	                    android:layout_width="fill_parent"
	                    android:layout_height="fill_parent"
	                    android:orientation="vertical" >
	                    
	                        	                    
		                    <TextView
					        	android:id="@+id/showLocationView"
					        	android:layout_width="wrap_content"
					        	android:layout_height="wrap_content"
					        	android:text="@string/showLocationView" />
	                    
	                 </LinearLayout>
	                    
                
				                       
			         <LinearLayout
					     android:layout_width="fill_parent"
					    android:layout_height="fill_parent"
					    android:id="@+id/tab3"
					    android:orientation="vertical"
					    android:paddingTop="60px"
					     >
							     <TextView  
							    android:layout_width="fill_parent" 
							    android:layout_height="100px" 
							    android:text="This is tab 3"
							    android:id="@+id/tab3"
							    />
					   
			     </LinearLayout>
					        
	                      
	                
    			</FrameLayout>
    	
            
    </TabHost>
    
    

</LinearLayout>
